<resources>
    <string name="app_name">Gasys App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    Form peminjaman mobil dinas-->
    <string name="pengemudi">Pengemudi</string>
    <string name="peminjam">Peminjam</string>
    <string name="tgl_peminjaman">Tgl Peminjaman</string>
    <string name="tgl_pengembalian">Tgl Pengembalian</string>
    <string name="divisi">Divisi/Departemen</string>
    <string name="no_pol">No Polisi</string>
    <string name="jam_berangkat">Jam Berangkat</string>
    <string name="jam_pulang">Jam Pulang</string>
    <string name="tujuan">Tujuan dan Keperluan</string>

    <string name="uri">Uri : %1$s</string>
    <string name="size">Size :  %1$d</string>
    <string name="mime">Mime: %1$s</string>
    <string name="type">Type : %1$d</string>
    <string name="name">Name : %1$s</string>
    <string name="bucketname">BucketName : %1$s</string>
</resources>